--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </header>
 
-        <div id="gallery" class="gallery">
+        <div id ="gallery" class="gallery">
             <!-- ======================
                 Gallery markup: 
 
@@ -96,6 +96,6 @@
         ======================== -->
 
         <!-- Add your JS here -->
-        
+        <script src="js/script.js"></script> 
     </body>
 </html>
